<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anju.quickbuzzer_301.GameShowActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:text="1"
            android:id="@+id/button1"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="75dp"
            android:visibility="gone" />

        <Button
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:text="2"
            android:id="@+id/button2"
            android:layout_row="0"
            android:layout_column="2"
            android:textSize="75dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView1"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="bold"
            android:textAlignment="center"
            android:singleLine="true"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="2"
            android:gravity="center" />

        <Button
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:text="3"
            android:id="@+id/button3"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="75dp"
            android:visibility="gone" />

        <Button
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:text="4"
            android:id="@+id/button4"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="75dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView4"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView5"
            android:layout_row="3"
            android:layout_column="2"
            android:gravity="center"/>
    </GridLayout>

</RelativeLayout>
