<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mode_selection">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_mode"
        android:id="@+id/mode_selection_prompt"
        android:layout_marginTop="101dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player"
        android:id="@+id/single_player_button"
        android:layout_below="@+id/mode_selection_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        android:id="@+id/multiplayer_button"
        android:layout_below="@+id/single_player_button"
        android:layout_alignStart="@+id/statistics_button"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:id="@+id/statistics_button"
        android:layout_below="@+id/multiplayer_button"
        android:layout_alignStart="@+id/single_player_button"
        android:layout_marginTop="41dp" />
</RelativeLayout>